Add AWK script for schema generation, input data, and result plotting for GTF processing, removed old files

--- a/compare_tools_human.ipynb
+++ b/compare_tools_human.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,20 @@
     "import gffutils\n",
     "import time\n",
     "import pybedtools\n",
-    "import os"
+    "import os\n",
+    "from IPython import get_ipython"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gtf_file_name = \"Homo_sapiens.GRCh38.112.chr.gtf\"\n",
+    "# gtf_file_name = \"/home/U210050044/data/DH607-project/Homo_sapiens.GRCh38.112.chr.gtf\"\n",
+    "sql_db_name = \"db.sqlite3\"\n",
+    "results_file_name = \"results_human.txt\""
    ]
   },
   {
@@ -22,9 +35,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "gtf_file_name = \"Homo_sapiens.GRCh38.112.chr.gtf\"\n",
-    "# gtf_file_name = \"/home/U210050044/data/DH607-project/\"\n",
-    "sql_db_name = \"db.sqlite3\""
+    "results_file = open(results_file_name,\"w\")"
    ]
   },
   {
@@ -44,7 +55,7 @@
     "start_time = time.time()\n",
     "human_gr = pr.read_gtf(gtf_file_name)\n",
     "end_time = time.time()\n",
-    "print(f\"Finished reading into pyranges object in time {end_time-start_time}\")"
+    "results_file.write(f\"Finished reading into pyranges object in time {end_time-start_time}\\n\")"
    ]
   },
   {
@@ -93,19 +104,39 @@
    "source": [
     "os.system(\"g++ gtf_to_sql.cpp -lsqlite3\")\n",
     "start_time = time.time()\n",
-    "os.system(f\"./a.out {sql_db_name} {gtf_file_name}\")\n",
+    "os.system(f\"./a.out {sql_db_name} human {gtf_file_name} 8\")\n",
     "end_time = time.time()\n",
-    "print(f\"Finished reading into sql file in time {end_time-start_time}\")"
+    "results_file.write(f\"Finished reading into sql file in time {end_time-start_time}\\n\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "conn = sqlite3.connect(sql_db_name)\n",
     "cur = conn.cursor()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Finished reading from sql to pyranges in time 66.74821639060974\n"
+     ]
+    }
+   ],
+   "source": [
+    "start_time = time.time()\n",
+    "human_gr2 = pr.PyRanges(pd.read_sql(\"SELECT * FROM human\", conn))\n",
+    "end_time = time.time()\n",
+    "results_file.write(f\"Finished reading from sql to pyranges in time {end_time-start_time}\\n\")"
    ]
   },
   {
@@ -131,7 +162,8 @@
    ],
    "source": [
     "# Using pyranges\n",
-    "%timeit exon_counts_pr = (human_gr[human_gr.Feature == \"exon\"].df.groupby(\"gene_id\").size().reset_index(name=\"exon_count\"))"
+    "time = get_ipython().run_line_magic(\"timeit\",'-o (human_gr[human_gr.Feature == \"exon\"].df.groupby(\"gene_id\").size().reset_index(name=\"exon_count\"))')\n",
+    "results_file.write(f\"Time taken to count exons using pyranges is {time}\\n\")"
    ]
   },
   {
@@ -163,25 +195,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2.59 s ± 368 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
+      "2.38 s ± 133 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
      ]
     }
    ],
    "source": [
     "# Using sql\n",
-    "%timeit exon_counts_sql = pd.read_sql_query(\"SELECT gene_id, COUNT(*) as exon_count FROM human WHERE Feature = 'exon' GROUP BY gene_id\", conn)"
+    "time = get_ipython().run_line_magic(\"timeit\",'-o exon_counts_sql = pd.read_sql_query(\"SELECT gene_id, COUNT(*) as exon_count FROM human WHERE Feature = \\'exon\\' GROUP BY gene_id\", conn)')\n",
+    "results_file.write(f\"Time taken to count exons using sql is {time}\\n\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -190,7 +223,7 @@
        "True"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -201,7 +234,10 @@
     "exon_counts_sql = pd.read_sql_query(\"SELECT gene_id, COUNT(*) as exon_count FROM human WHERE Feature = 'exon' GROUP BY gene_id\", conn)\n",
     "exon_counts_sql[\"exon_count\"] = exon_counts_sql[\"exon_count\"].astype(int)\n",
     "exon_counts_pr[\"exon_count\"] = exon_counts_pr[\"exon_count\"].astype(int)\n",
-    "exon_counts_sql.equals(exon_counts_pr)"
+    "if exon_counts_sql.equals(exon_counts_pr):\n",
+    "    results_file.write(\"exon counts are identical\\n\")\n",
+    "else:\n",
+    "    results_file.write(\"exon counts are not identical\\n\")"
    ]
   },
   {
@@ -226,7 +262,8 @@
    ],
    "source": [
     "# Using pyranges\n",
-    "%timeit exon_lengths_pr = (human_gr[human_gr.Feature == \"exon\"].df.assign(length=lambda df: df[\"End\"] - df[\"Start\"]).groupby(\"gene_id\")[\"length\"].sum().reset_index(name=\"total_exon_length\"))"
+    "time = get_ipython().run_line_magic(\"timeit\",'-o exon_lengths_pr = (human_gr[human_gr.Feature == \"exon\"].df.assign(length=lambda df: df[\"End\"] - df[\"Start\"]).groupby(\"gene_id\")[\"length\"].sum().reset_index(name=\"total_exon_length\"))')\n",
+    "results_file.write(f\"Time taken to calculate total exon length using pyranges is {time}\\n\")"
    ]
   },
   {
@@ -273,12 +310,13 @@
    ],
    "source": [
     "# using sql\n",
-    "%timeit exon_lengths_sql = pd.read_sql_query(\"SELECT gene_id, SUM(End - Start) as total_exon_length FROM human WHERE Feature = 'exon' GROUP BY gene_id\", conn)"
+    "time = get_ipython().run_line_magic(\"timeit\",'-o exon_lengths_sql = pd.read_sql_query(\"SELECT gene_id, SUM(End - Start) as total_exon_length FROM human WHERE Feature = \\'exon\\' GROUP BY gene_id\", conn)')\n",
+    "results_file.write(f\"Time taken to calculate total exon length using sql is {time}\\n\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -287,7 +325,7 @@
        "True"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -298,7 +336,10 @@
     "exon_lengths_sql = pd.read_sql_query(\"SELECT gene_id, SUM(End - Start) as total_exon_length FROM human WHERE Feature = 'exon' GROUP BY gene_id\", conn)\n",
     "exon_lengths_sql[\"total_exon_length\"] = exon_lengths_sql[\"total_exon_length\"].astype(int)\n",
     "exon_lengths_pr[\"total_exon_length\"] = exon_lengths_pr[\"total_exon_length\"].astype(int)\n",
-    "exon_lengths_sql.equals(exon_lengths_pr)"
+    "if exon_lengths_sql.equals(exon_lengths_pr):\n",
+    "    results_file.write(\"exon lengths are identical\\n\")\n",
+    "else:\n",
+    "    results_file.write(\"exon lengths are not identical\\n\")"
    ]
   },
   {
@@ -323,7 +364,8 @@
    ],
    "source": [
     "# Using pyranges\n",
-    "%timeit transcript_counts_pr = human_gr[human_gr.Feature == \"transcript\"].df[\"Chromosome\"].value_counts().idxmax()"
+    "time = get_ipython().run_line_magic(\"timeit\",'-o transcript_counts_pr = human_gr[human_gr.Feature == \"transcript\"].df[\"Chromosome\"].value_counts().idxmax()')\n",
+    "results_file.write(f\"Time taken to find chromosome with most transcripts using pyranges is {time}\\n\")"
    ]
   },
   {
@@ -369,19 +411,43 @@
    ],
    "source": [
     "# using sql\n",
-    "%timeit transcript_counts_sql = pd.read_sql_query(\"SELECT Chromosome, COUNT(*) as transcript_count FROM human WHERE Feature = 'transcript' GROUP BY Chromosome ORDER BY transcript_count DESC LIMIT 1\", conn)"
+    "time = get_ipython().run_line_magic(\"timeit\",'-o transcript_counts_sql = pd.read_sql_query(\"SELECT Chromosome, COUNT(*) as transcript_count FROM human WHERE Feature = \\'transcript\\' GROUP BY Chromosome ORDER BY transcript_count DESC LIMIT 1\", conn)')\n",
+    "results_file.write(f\"Time taken to find chromosome with most transcripts using sql is {time}\\n\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# verify if transcript_counts_pr and transcript_counts_sql are identical\n",
+    "transcript_counts_pr = human_gr2[human_gr2.Feature == \"transcript\"].df[\"Chromosome\"].value_counts().idxmax()\n",
+    "transcript_counts_sql = pd.read_sql_query(\"SELECT Chromosome, COUNT(*) as transcript_count FROM human WHERE Feature = 'transcript' GROUP BY Chromosome ORDER BY transcript_count DESC LIMIT 1\", conn)\n",
+    "if transcript_counts_pr == transcript_counts_sql[\"Chromosome\"].values[0]:\n",
+    "    results_file.write(\"transcript counts are identical\\n\")\n",
+    "else:\n",
+    "    results_file.write(\"transcript counts are not identical\\n\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# verify if transcript_counts_pr and transcript_counts_sql are identical\n",
-    "transcript_counts_pr = human_gr[human_gr.Feature == \"transcript\"].df[\"Chromosome\"].value_counts().idxmax()\n",
-    "transcript_counts_sql = pd.read_sql_query(\"SELECT Chromosome, COUNT(*) as transcript_count FROM human WHERE Feature = 'transcript' GROUP BY Chromosome ORDER BY transcript_count DESC LIMIT 1\", conn)\n",
-    "transcript_counts_pr == transcript_counts_sql[\"Chromosome\"].values[0]"
+    "results_file.close()"
    ]
   },
   {
@@ -408,7 +474,7 @@
    "source": [
     "# Combine all overlapping exon intervals into contiguous regions\n",
     "# Using pyranges\n",
-    "%timeit exon_intervals_pr = human_gr[human_gr.Feature == \"exon\"].merge(strand=False)"
+    "# %timeit exon_intervals_pr = human_gr[human_gr.Feature == \"exon\"].merge(strand=False)"
    ]
   },
   {
@@ -472,7 +538,7 @@
    ],
    "source": [
     "# Using pyranges\n",
-    "%timeit overlapping_genes_pr = human_gr[human_gr.Feature == \"gene\"].overlap(pr.from_dict({\"Chromosome\": [\"1\"], \"Start\": [100000], \"End\": [200000]}), strand=False)"
+    "# %timeit overlapping_genes_pr = human_gr[human_gr.Feature == \"gene\"].overlap(pr.from_dict({\"Chromosome\": [\"1\"], \"Start\": [100000], \"End\": [200000]}), strand=False)"
    ]
   },
   {
