Add index on Chromosome and Strand in gtf_to_sql.cpp, added method for interval arithmetic using sql

--- a/compare_tools_human.ipynb
+++ b/compare_tools_human.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,8 @@
     "import time\n",
     "import pybedtools\n",
     "import os\n",
-    "from IPython import get_ipython"
+    "from IPython import get_ipython\n",
+    "from multiprocessing import Pool"
    ]
   },
   {
@@ -25,29 +26,29 @@
    "source": [
     "gtf_file_name = \"Homo_sapiens.GRCh38.112.chr.gtf\"\n",
     "# gtf_file_name = \"/home/U210050044/data/DH607-project/Homo_sapiens.GRCh38.112.chr.gtf\"\n",
-    "sql_db_name = \"db.sqlite3\"\n",
-    "results_file_name = \"results_human.txt\""
+    "sql_db_name = \"db-human.sqlite3\"\n",
+    "# results_file_name = \"results_human.txt\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "results_file = open(results_file_name,\"w\")"
+    "# results_file = open(results_file_name,\"w\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Finished reading into pyranges object in time 136.18221592903137\n"
+      "Finished reading into pyranges object in time 139.58934473991394\n"
      ]
     }
    ],
@@ -55,7 +56,7 @@
     "start_time = time.time()\n",
     "human_gr = pr.read_gtf(gtf_file_name)\n",
     "end_time = time.time()\n",
-    "results_file.write(f\"Finished reading into pyranges object in time {end_time-start_time}\\n\")"
+    "print(f\"Finished reading into pyranges object in time {end_time-start_time}\")"
    ]
   },
   {
@@ -90,14 +91,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Converted Pyranges object to in-memory sql db in time 50.461308002471924\n"
+      "Finished reading into sql file in time 103.30280351638794\n"
      ]
     }
    ],
@@ -106,12 +107,12 @@
     "start_time = time.time()\n",
     "os.system(f\"./a.out {sql_db_name} human {gtf_file_name} 8\")\n",
     "end_time = time.time()\n",
-    "results_file.write(f\"Finished reading into sql file in time {end_time-start_time}\\n\")"
+    "print(f\"Finished reading into sql file in time {end_time-start_time}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -136,7 +137,7 @@
     "start_time = time.time()\n",
     "human_gr2 = pr.PyRanges(pd.read_sql(\"SELECT * FROM human\", conn))\n",
     "end_time = time.time()\n",
-    "results_file.write(f\"Finished reading from sql to pyranges in time {end_time-start_time}\\n\")"
+    "print(f\"Finished reading from sql to pyranges in time {end_time-start_time}\")"
    ]
   },
   {
@@ -163,7 +164,7 @@
    "source": [
     "# Using pyranges\n",
     "time = get_ipython().run_line_magic(\"timeit\",'-o (human_gr[human_gr.Feature == \"exon\"].df.groupby(\"gene_id\").size().reset_index(name=\"exon_count\"))')\n",
-    "results_file.write(f\"Time taken to count exons using pyranges is {time}\\n\")"
+    "print(f\"Time taken to count exons using pyranges is {time}\")"
    ]
   },
   {
@@ -195,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -209,12 +210,12 @@
    "source": [
     "# Using sql\n",
     "time = get_ipython().run_line_magic(\"timeit\",'-o exon_counts_sql = pd.read_sql_query(\"SELECT gene_id, COUNT(*) as exon_count FROM human WHERE Feature = \\'exon\\' GROUP BY gene_id\", conn)')\n",
-    "results_file.write(f\"Time taken to count exons using sql is {time}\\n\")"
+    "print(f\"Time taken to count exons using sql is {time}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -235,9 +236,9 @@
     "exon_counts_sql[\"exon_count\"] = exon_counts_sql[\"exon_count\"].astype(int)\n",
     "exon_counts_pr[\"exon_count\"] = exon_counts_pr[\"exon_count\"].astype(int)\n",
     "if exon_counts_sql.equals(exon_counts_pr):\n",
-    "    results_file.write(\"exon counts are identical\\n\")\n",
+    "    print(\"exon counts are identical\")\n",
     "else:\n",
-    "    results_file.write(\"exon counts are not identical\\n\")"
+    "    print(\"exon counts are not identical\")"
    ]
   },
   {
@@ -263,7 +264,7 @@
    "source": [
     "# Using pyranges\n",
     "time = get_ipython().run_line_magic(\"timeit\",'-o exon_lengths_pr = (human_gr[human_gr.Feature == \"exon\"].df.assign(length=lambda df: df[\"End\"] - df[\"Start\"]).groupby(\"gene_id\")[\"length\"].sum().reset_index(name=\"total_exon_length\"))')\n",
-    "results_file.write(f\"Time taken to calculate total exon length using pyranges is {time}\\n\")"
+    "print(f\"Time taken to calculate total exon length using pyranges is {time}\")"
    ]
   },
   {
@@ -297,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -311,7 +312,7 @@
    "source": [
     "# using sql\n",
     "time = get_ipython().run_line_magic(\"timeit\",'-o exon_lengths_sql = pd.read_sql_query(\"SELECT gene_id, SUM(End - Start) as total_exon_length FROM human WHERE Feature = \\'exon\\' GROUP BY gene_id\", conn)')\n",
-    "results_file.write(f\"Time taken to calculate total exon length using sql is {time}\\n\")"
+    "print(f\"Time taken to calculate total exon length using sql is {time}\")"
    ]
   },
   {
@@ -337,9 +338,9 @@
     "exon_lengths_sql[\"total_exon_length\"] = exon_lengths_sql[\"total_exon_length\"].astype(int)\n",
     "exon_lengths_pr[\"total_exon_length\"] = exon_lengths_pr[\"total_exon_length\"].astype(int)\n",
     "if exon_lengths_sql.equals(exon_lengths_pr):\n",
-    "    results_file.write(\"exon lengths are identical\\n\")\n",
+    "    print(\"exon lengths are identical\")\n",
     "else:\n",
-    "    results_file.write(\"exon lengths are not identical\\n\")"
+    "    print(\"exon lengths are not identical\")"
    ]
   },
   {
@@ -365,7 +366,7 @@
    "source": [
     "# Using pyranges\n",
     "time = get_ipython().run_line_magic(\"timeit\",'-o transcript_counts_pr = human_gr[human_gr.Feature == \"transcript\"].df[\"Chromosome\"].value_counts().idxmax()')\n",
-    "results_file.write(f\"Time taken to find chromosome with most transcripts using pyranges is {time}\\n\")"
+    "print(f\"Time taken to find chromosome with most transcripts using pyranges is {time}\")"
    ]
   },
   {
@@ -398,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -412,12 +413,12 @@
    "source": [
     "# using sql\n",
     "time = get_ipython().run_line_magic(\"timeit\",'-o transcript_counts_sql = pd.read_sql_query(\"SELECT Chromosome, COUNT(*) as transcript_count FROM human WHERE Feature = \\'transcript\\' GROUP BY Chromosome ORDER BY transcript_count DESC LIMIT 1\", conn)')\n",
-    "results_file.write(f\"Time taken to find chromosome with most transcripts using sql is {time}\\n\")"
+    "print(f\"Time taken to find chromosome with most transcripts using sql is {time}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -436,9 +437,9 @@
     "transcript_counts_pr = human_gr2[human_gr2.Feature == \"transcript\"].df[\"Chromosome\"].value_counts().idxmax()\n",
     "transcript_counts_sql = pd.read_sql_query(\"SELECT Chromosome, COUNT(*) as transcript_count FROM human WHERE Feature = 'transcript' GROUP BY Chromosome ORDER BY transcript_count DESC LIMIT 1\", conn)\n",
     "if transcript_counts_pr == transcript_counts_sql[\"Chromosome\"].values[0]:\n",
-    "    results_file.write(\"transcript counts are identical\\n\")\n",
+    "    print(\"transcript counts are identical\")\n",
     "else:\n",
-    "    results_file.write(\"transcript counts are not identical\\n\")"
+    "    print(\"transcript counts are not identical\")"
    ]
   },
   {
@@ -460,21 +461,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.76 s ± 57.8 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
+      "5.48 s ± 383 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n",
+      "Time taken to merge exons using pyranges is 5.48 s ± 383 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
      ]
     }
    ],
    "source": [
-    "# Combine all overlapping exon intervals into contiguous regions\n",
     "# Using pyranges\n",
-    "# %timeit exon_intervals_pr = human_gr[human_gr.Feature == \"exon\"].merge(strand=False)"
+    "time = get_ipython().run_line_magic(\"timeit\",'-o exon_intervals_pr = human_gr[human_gr.Feature == \"exon\"].merge(strand=True)')\n",
+    "print(f\"Time taken to merge exons using pyranges is {time}\")"
    ]
   },
   {
@@ -496,23 +498,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# using sql\n",
+    "def get_exon_intervals_sql(chrom_strand):\n",
+    "    chrom, strand = chrom_strand\n",
+    "    exon_intervals_sql = pd.read_sql_query(f\"SELECT Start, End FROM human WHERE Feature = 'exon' AND Chromosome = '{chrom}' AND Strand = '{strand}'\", conn)\n",
+    "    exon_intervals_sql = pr.methods.merge._merge(exon_intervals_sql, chromosome=chrom, count=None, strand=strand)\n",
+    "    return exon_intervals_sql\n",
+    "\n",
+    "def get_exon_intervals_sql_multi():\n",
+    "    chrom_strand_tup = pd.read_sql_query(\"SELECT DISTINCT Chromosome, Strand FROM human\", conn)\n",
+    "    chrom_strand_tup = list(zip(chrom_strand_tup[\"Chromosome\"], chrom_strand_tup[\"Strand\"]))\n",
+    "    with Pool(8) as p:\n",
+    "        exon_intervals_sql = p.map(get_exon_intervals_sql, chrom_strand_tup)\n",
+    "    exon_intervals_sql = pd.concat(exon_intervals_sql).sort_values([\"Chromosome\", \"Strand\", \"Start\", \"End\"]).reset_index(drop=True)\n",
+    "    return exon_intervals_sql"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "6.63 s ± 21 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
+      "4.07 s ± 101 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n",
+      "Time taken to merge exons using sql is 4.07 s ± 101 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
      ]
     }
    ],
    "source": [
-    "# # using sql\n",
-    "# def find_exon_intervals_sql():\n",
-    "#     exon_intervals = pd.read_sql_query(\"SELECT Chromosome, Start, End FROM human WHERE Feature = 'exon' ORDER BY Chromosome, Start\", conn)\n",
-    "#     return pybedtools.BedTool.from_dataframe(exon_intervals).merge()\n",
-    "# %timeit exon_intervals_sql = find_exon_intervals_sql()"
+    "time = get_ipython().run_line_magic(\"timeit\",'-o exon_intervals_sql = get_exon_intervals_sql_multi()')\n",
+    "print(f\"Time taken to merge exons using sql is {time}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "exon intervals are identical\n"
+     ]
+    }
+   ],
+   "source": [
+    "# check if exon_intervals_pr and exon_intervals_sql are identical\n",
+    "exon_intervals_pr = human_gr[human_gr.Feature == \"exon\"].merge(strand=True).df.sort_values([\"Chromosome\", \"Strand\", \"Start\", \"End\"]).reset_index(drop=True)\n",
+    "exon_intervals_sql = get_exon_intervals_sql_multi()\n",
+    "if exon_intervals_pr.equals(exon_intervals_sql):\n",
+    "    print(\"exon intervals are identical\")"
    ]
   },
   {
@@ -520,25 +563,27 @@
    "metadata": {},
    "source": [
     "### Query 2: Finding Overlaps with a Specific Interval\n",
-    "Find all gene features that overlap a given interval chr1:100000-200000"
+    "Find all gene features that overlap a given interval chr1:100000-200000 + strand"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 121,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "399 ms ± 2.59 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
+      "1.03 s ± 42 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n",
+      "Time taken to find overlapping genes using pyranges is 1.03 s ± 42 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
      ]
     }
    ],
    "source": [
     "# Using pyranges\n",
-    "# %timeit overlapping_genes_pr = human_gr[human_gr.Feature == \"gene\"].overlap(pr.from_dict({\"Chromosome\": [\"1\"], \"Start\": [100000], \"End\": [200000]}), strand=False)"
+    "time = get_ipython().run_line_magic(\"timeit\",'-o overlapping_genes_pr = human_gr[human_gr.Feature == \"gene\"].overlap(pr.from_dict({\"Chromosome\": [\"1\"], \"Start\": [100000], \"End\": [200000], \"Strand\": [\"+\"]}), strandedness=\"same\")')\n",
+    "print(f\"Time taken to find overlapping genes using pyranges is {time}\")"
    ]
   },
   {
@@ -569,24 +614,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 118,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# using sql\n",
+    "other_genes_all = pd.DataFrame({\"Chromosome\": [\"1\"], \"Start\": [100000], \"End\": [200000], \"Strand\": [\"+\"]})\n",
+    "def get_overlapping_genes_sql(chrom_strand):\n",
+    "    chrom, strand = chrom_strand\n",
+    "    self_genes_sql = pd.read_sql_query(f\"SELECT * FROM human WHERE Feature = 'gene' AND Chromosome = '{chrom}' AND Strand = '{strand}'\", conn)\n",
+    "    other_genes = other_genes_all[(other_genes_all[\"Chromosome\"] == chrom) & (other_genes_all[\"Strand\"] == strand)]\n",
+    "    overlapping_genes_sql = pr.methods.intersection._overlap(self_genes_sql, other_genes, how=\"first\")\n",
+    "    return overlapping_genes_sql\n",
+    "\n",
+    "def get_overlapping_genes_sql_multi():\n",
+    "    chrom_strand_tup = pd.read_sql_query(\"SELECT DISTINCT Chromosome, Strand FROM human\", conn)\n",
+    "    chrom_strand_tup = list(zip(chrom_strand_tup[\"Chromosome\"], chrom_strand_tup[\"Strand\"]))\n",
+    "    with Pool(8) as p:\n",
+    "        overlapping_genes_sql = p.map(get_overlapping_genes_sql, chrom_strand_tup)\n",
+    "    overlapping_genes_sql = pd.concat(overlapping_genes_sql) #.sort_values([\"Chromosome\", \"Strand\", \"Start\", \"End\"]).reset_index(drop=True)\n",
+    "    return overlapping_genes_sql"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 122,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "7.41 s ± 51.1 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
+      "2.29 s ± 190 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n",
+      "Time taken to find overlapping genes using sql is 2.29 s ± 190 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
      ]
     }
    ],
    "source": [
-    "# # using sql\n",
-    "# def find_overlapping_genes_sql():\n",
-    "#     exon_intervals_overlapping = pybedtools.BedTool.from_dataframe(pd.DataFrame({\"Chromosome\": [\"1\"], \"Start\": [100000], \"End\": [200000]}))\n",
-    "#     exon_intervals = pd.read_sql_query(\"SELECT Chromosome, Start, End FROM human WHERE Feature = 'exon' ORDER BY Chromosome, Start\", conn)\n",
-    "#     return exon_intervals_overlapping.window(pybedtools.BedTool.from_dataframe(exon_intervals).merge(), w=0)\n",
-    "# %timeit overlapping_genes_sql = find_overlapping_genes_sql()"
+    "time = get_ipython().run_line_magic(\"timeit\",'-o overlapping_genes_sql = get_overlapping_genes_sql_multi()')\n",
+    "print(f\"Time taken to find overlapping genes using sql is {time}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 120,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "overlapping genes are identical\n"
+     ]
+    }
+   ],
+   "source": [
+    "# check if overlapping_genes_pr and overlapping_genes_sql are identical\n",
+    "overlapping_genes_pr = human_gr[human_gr.Feature == \"gene\"].overlap(pr.from_dict({\"Chromosome\": [\"1\"], \"Start\": [100000], \"End\": [200000], \"Strand\": [\"+\"]}), strandedness=\"same\")\n",
+    "overlapping_genes_sql = get_overlapping_genes_sql_multi()\n",
+    "overlapping_genes_sql = overlapping_genes_sql.sort_values([\"Chromosome\", \"Strand\", \"Start\", \"End\"]).reset_index(drop=True)\n",
+    "overlapping_genes_pr = overlapping_genes_pr.df.sort_values([\"Chromosome\", \"Strand\", \"Start\", \"End\"]).reset_index(drop=True)\n",
+    "diff = overlapping_genes_pr.compare(overlapping_genes_sql)\n",
+    "if diff.empty:\n",
+    "    print(\"overlapping genes are identical\")\n",
+    "else:\n",
+    "    print(\"overlapping genes are not identical\")"
    ]
   },
   {
